2009-12-05  Jaroslav Hajek  <highegg@gmail.com>

	* Array-d.cc (Array<double>::is_sorted): Optimized specialization.
	* Array-f.cc (Array<float>::is_sorted): Ditto.

2009-12-05  Jaroslav Hajek  <highegg@gmail.com>

	* oct-sort.cc (lookup_binary): Remove.
	(octave_sort<T>::lookup (const T*, octave_idx_type, const T&, comp)): Move
	code here.
	(octave_sort<T>::lookup (const T*, octave_idx_type, const T*,
	octave_idx_type, octave_idx_type *, comp)): Remove offset parameter.
	Use a simple sequence of lookups.
	(octave_sort<T>::lookup (const T*, octave_idx_type, const T*,
	octave_idx_type, octave_idx_type *)): Update.
	(octave_sort<T>::lookupm, octave_sort<T>::lookupb): Remove.
	(octave_sort<T>::lookup_sorted): New overloaded method.

	* Array.cc (Array<T>::lookup (const Array<T>&, sortmode)): Remove
	linf & rinf params. Rewrite using is_sorted to check for sortedness,
	call octave_sort::lookup_sorted to do the sorted merge.
	(Array<T>::lookupm, Array<T>::lookupb): Remove.
	(NO_INSTANTIATE_ARRAY_SORT): Update.

2009-12-05  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (sortrows_comparator): Rename to safe_comparator.
	(Array<T>::is_sorted): Use it here.
	* Array-d.cc: Update.
	* Array-f.cc: Update.
	* Array-C.cc: Update.
	* Array-fC.cc: Update.

2009-12-03  John W. Eaton  <jwe@octave.org>

	* Makefile.am (BUILT_NODISTFILES): New variable.

2009-12-01  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.cc (idx_vector::idx_range_rep::unconvert,
	idx_vector::idx_scalar_rep::unconvert,
	idx_vector::idx_vector_rep::unconvert,
	idx_vector::idx_mask_rep::unconvert): New methods.
	(idx_vector::unconvert): Use them here. Add mask output.
	* idx-vector.h: Update decls.

2009-11-28  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.h (dim_vector::zero_by_zero): New method.
	* idx-vector.h (idx_vector::idx_mask_rep::is_colon_equiv): Fix.
	* Array.cc (Array<T>::assign): Minor tweaks. Optimize 
	A = []; A(1:m,1:n,1:k) = X for all cases. Use a shallow copy